@@ -2,6 +2,7 @@ package nosi.core.webapp;
 
 import nosi.core.config.Config;
 import nosi.core.config.ConfigApp;
+import nosi.core.config.ConfigCommonMainConstants;
 import nosi.core.exception.ServerErrorHttpException;
 import nosi.core.gui.components.IGRPForm;
 import nosi.core.gui.components.IGRPMessage;
@@ -27,19 +28,29 @@ import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
 import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.lang.reflect.Parameter;
 import java.net.MalformedURLException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 /**
  * @author Marcel Iekiny Apr 15, 2017
  */
 public class Controller {
+	
+	private static final Logger LOGGER = LogManager.getLogger(Controller.class);
 
     protected ConfigApp configApp = ConfigApp.getInstance();
 
@@ -212,9 +223,9 @@ public class Controller {
         if (Core.isNotNull(obj)) {
             TaskServiceQuery task = (TaskServiceQuery) obj;
             List<TaskVariableDetails> v = taskService.queryHistoryTaskVariables(task.getId());
-            String prof_id = v.stream().filter(var -> var.getPropertyId().equals("profile")).findFirst().get()
+            String profId = v.stream().filter(var -> var.getPropertyId().equals("profile")).findFirst().get()
                     .getPropertyValue();
-            ProfileType prof = new ProfileType().findOne(Core.toInt(prof_id));
+            ProfileType prof = new ProfileType().findOne(Core.toInt(profId));
             String userName = v.stream().filter(var -> var.getPropertyId().equals("userName")).findFirst().get()
                     .getPropertyValue();
             details.setnProcess(task.getProcessInstanceId());
@@ -255,7 +266,7 @@ public class Controller {
             Class<?> c = Class.forName(packageName + "." + BPMNConstants.PREFIX_TASK + runtimeTak.getTask().getTaskDefinitionKey() + "Controller");
             Method method = c.getMethod("getOutputDocumentType");
             @SuppressWarnings("unchecked")
-            List<TipoDocumentoEtapa> listDocOutput = (List<TipoDocumentoEtapa>) method.invoke(c.newInstance());
+            List<TipoDocumentoEtapa> listDocOutput = (List<TipoDocumentoEtapa>) method.invoke(c.getDeclaredConstructor().newInstance());
             display.addListDocumentType(listDocOutput);
         } catch (Exception e) {
             e.printStackTrace();
@@ -569,7 +580,7 @@ public class Controller {
             auxActionName = "actionIndex";
             auxcontrollerPath = this.getConfig().getPackage("igrp", "Home", auxActionName);
         }
-        return Page.loadPage(auxcontrollerPath, auxActionName);
+        return loadPage(auxcontrollerPath, auxActionName);
     }
 
     protected Response call(String app, String page, String action) {
@@ -585,7 +596,7 @@ public class Controller {
         igrpApp.setCurrentAppName(app);
         igrpApp.setCurrentPageName(page);
         igrpApp.setCurrentActionName(action);
-        Object obj = Page.loadPage(auxcontrollerPath, "action" + StringHelper.camelCaseFirst(action));
+        Object obj = loadPage(auxcontrollerPath, "action" + StringHelper.camelCaseFirst(action));
         Response resp = (Response) obj;
         if (resp != null) {
             String content = resp.getContent();
@@ -723,5 +734,53 @@ public class Controller {
     public Config getConfig() {
         return this.configApp.getConfig();
     }
+    
+    public static Object loadPage(String controllerPath, String actionName){
+		Igrp igrpApp = Igrp.getInstance();
+		try {
+			Class<?> classController = Class.forName(controllerPath);
+			Object controller = classController.getDeclaredConstructor().newInstance();
+			igrpApp.setCurrentController((Controller) controller);
+			Method action = Arrays.stream(classController.getDeclaredMethods()).filter(p -> p.getName().equals(actionName)).findFirst().orElseThrow(NoSuchMethodException::new);
+			if(action.getParameterCount() == 0)
+				return  action.invoke(controller);
+			return action.invoke(controller, formalParameters(action, igrpApp).toArray());
+		}catch (Exception e) {
+			addParametersToErrorPage(igrpApp);
+			LOGGER.fatal(e.getMessage(), e);
+			throw new RuntimeException(e.getMessage(), e);
+		}
+	}
+    
+    private static List<Object> formalParameters(Method action, Igrp igrpApp) throws ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+		List<Object> paramValues = new ArrayList<>();
+		for (Parameter parameter : action.getParameters()) {
+			if (parameter.getType().getSuperclass().getName().equals("nosi.core.webapp.Model")) {
+				// Dependency Injection for models
+				Class<?> classModel = Class.forName(parameter.getType().getName());
+				nosi.core.webapp.Model model = (Model) classModel.getDeclaredConstructor().newInstance();
+				model.load();
+				paramValues.add(model);
+			} else // Dependency Injection for simple vars ... 
+				if (parameter.getType().getName().equals("java.lang.String") && parameter.getAnnotation(RParam.class) != null) {
+					if (parameter.getType().isArray())
+						paramValues.add(igrpApp.getRequest().getParameterValues(parameter.getAnnotation(RParam.class).rParamName()));
+					else
+						paramValues.add(igrpApp.getRequest().getParameter(parameter.getAnnotation(RParam.class).rParamName()));
+			} else
+				paramValues.add(null);
+		}
+		return paramValues;
+	}
+    
+    private static void addParametersToErrorPage(Igrp igrpApp) {
+		ConfigApp configApp = ConfigApp.getInstance();
+		Map<String, Object> errorParam = new HashMap<>();
+		errorParam.put("dad", igrpApp.getCurrentAppName());
+		errorParam.put(ConfigCommonMainConstants.IGRP_ENV.value(), configApp.getMainSettings().getProperty(ConfigCommonMainConstants.IGRP_ENV.value()));
+		igrpApp.getRequest().setAttribute("igrp.error", errorParam);
+	}
+    
+
 
 }
